# SolarSystem

./: .gitignore  README_NOW.md  github.docx  ~$github.docx  ~WRL1093.tmp
algorithms/math/: CMakeLists.txt  main.cpp
arduino/: WiFiServer.ino  arm_code.ino  server_code.ino
arduino/servo1/: forward_inverse_kinematics.ino  servo1.ino
arduino/servo1/blinking/: blinking.ino
arduino/servo1/light_sensor/: light_sensor.ino
arduino/servo1/ultrasonic/: ultrasonic.ino
arduino/stepperMotorTB6600/: stepperMotorTB6600.ino
cpp/: CMakeCache.txt  Makefile  cmake_install.cmake  cpp_code.cbp  mpi2.cpp
cpp/Qt_repo/QTFirst/: QTFirst.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow2.cpp  mainwindow2.h  mainwindow2.ui  resource.qrc
cpp/SOT/: 6dofArmSoftware.cpp  SerialPort.h
cpp/camera_calibration/stereo-calibration-master/: CMakeLists.txt  RenameFilesApp.cpp  calib2.cpp  cmake_install.cmake  compile_commands.json
cpp/cpp_code/: Array.cpp  Array.h  CMakeCache.txt  CMakeLists.txt  List.cpp  List.h  Makefile  MoveSemantic.h  MyString.cpp  MyString.h  OpenCV.cpp  OpenCV.h  Queue.cpp  Queue.h  STL.cpp  STL.h  Stack.cpp  Stack.h  Student.cpp  Student.h  Vector.cpp  Vector.h  cmake_install.cmake  compile_commands.json  cppSerializationProgram.h  cpp_code  feature2.cpp  feature2.h  features.cpp  features.h  main.cpp  multithreading.cpp  multithreading.h
cpp/cpp_code-build/: CMakeCache.txt
cpp/cpp_code/cbp/: CMakeCache.txt  Makefile  cmake_install.cmake  cpp_code.cbp  cpp_code.layout
cpp/cpp_code/cpp_extra/: CppTopics.cpp  CppTopics.h
cpp/cpp_code/nbproject/private/: Default.properties
cpp/cpp_code/patterns/: Adapter.cpp  Adapter.h
cpp/cpp_code/tests/: Test.cpp  Test.h
cpp/d2co_app/: CMakeLists.txt
cpp/d2co_app/include/: opencv.h
cpp/d2co_app/saved_config/: Input.txt  file3.yml  saveCenterObjectData.txt  test_camera_calib2.yml  test_camera_calib3.yml
cpp/d2co_app/src/: InteractiveMarkerRos.cpp  detect_object.cpp  opencv.cpp  opencv.h
cpp/database_qt/Database/: Database.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
cpp/database_qt/build-Database-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
cpp/database_qt/build-Database-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/debug/: moc_mainwindow.cpp
cpp/kuka_drawingface/algorithm/: main — 2 for 50x50 10X10.cpp  main — копия.cpp  main.cpp  points.txt  spline.h  testerCpp.pro
cpp/kuka_drawingface/client_simulator/clientSimulator_PointsToFile_AllElem/: Makefile  Makefile.Debug  Makefile.Release  mainwindow.cpp
cpp/kuka_drawingface/faceDrawingLinux/: facePicturing.pro  facePicturing.pro.user.22  facePicturing.pro.user.4.8-pre1  opencv.cpp  ui_mainwindow.h
cpp/kuka_drawingface/kuka_krl_progs/: XmlClient.src  XmlClient.xml
cpp/kuka_drawingface/qt_opencv_server_kuka_app/: Makefile  Makefile.Debug  Makefile.Release  enums_constants.h  lenas_points.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  myserver.cpp  myserver.h  mythread.cpp  mythread.cpp.autosave  mythread.h  object_script.tester7_multithreadingTCP.Debug  object_script.tester7_multithreadingTCP.Release  opencv.cpp  opencv.h  opencvproxy.cpp  opencvproxy.h  serverproxy.cpp  serverproxy.h  tester.h  tester7_multithreadingTCP.pro  tester7_multithreadingTCP_resource.rc  ui_mainwindow.h  ~$SE_PICHKALEV_v12_PICH.docx
cpp/kuka_drawingface/qt_opencv_server_kuka_app/debug/: moc_mainwindow.cpp  moc_myserver.cpp  moc_mythread.cpp  moc_serverproxy.cpp  points.txt  pointsFull.txt  qrc_res.cpp
cpp/kuka_drawingface/qt_opencv_server_kuka_app/release/: moc_mainwindow.cpp  moc_myserver.cpp  moc_mythread.cpp  moc_opencv.cpp  moc_serverproxy.cpp  points.txt  pointsFull.txt
cpp/kuka_drawingface/qt_opencv_server_kuka_app/src/: DESE_PICHKALEV_v12_PICH.docx  facePicturing_linux.pro  mythread.cpp  mythread.h  opencv.h
cpp/openMP/: CMakeLists.txt  main.cpp
cpp/opencv_projects/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cpp/opencv_projects/apps/: track_object.cpp
cpp/opencv_projects/nbproject/private/: Default.properties
cpp/opencv_projects/src/: FiveDofArm.cpp  FiveDofArm.h
cpp/project1/: Rviz_config.rviz
cpp/ros/: howToPubMarkerWithText
cpp/test_cmake_ros/: CMakeLists.txt
cpp/zed_camera/tutorials/tutorial_1_hello_ZED/: main.cpp
java/.metadata/: version.ini
java/.metadata/.mylyn/.taskListIndex/: segments_1
java/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
java/.metadata/.plugins/org.eclipse.epp.mpc.ui/: dialog_settings.xml
java/.metadata/.plugins/org.eclipse.equinox.p2.ui/: dialog_settings.xml
java/.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
java/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
java/SomePr/SomePr/src/: flappyScore.txt  score.txt
java/java2/workspace (copy)/.metadata/: version.ini
java/java2/workspace (copy)/ChatClient/: pom.xml
java/java2/workspace (copy)/HW_03.05.18/: .project
java/java2/workspace (copy)/JsfLibrary_4_h/: .project
java/java2/workspace (copy)/KONTRWORK/: .project
java/java2/workspace (copy)/Library_1_jsf/: .classpath  .project
java/java2/workspace (copy)/Main/: subs  users
java/web_app_linkedIn/sweater/: package.json  pom.xml
java/workspace/SpringContactApp-master/: README.md  capp_db.sql
java/workspace/SpringDB_42/: .springBeans
kuka_drawingface/CV_Project/: CV_Project.cpp  spline.h  stdafx.cpp
kuka_drawingface/KukaPainting/: XmlClient.src
kuka_drawingface/TesterCv/testercode/: TesterCv.cpp  points.txt  result.docx  server.cpp  spline.h  stdafx.cpp
kuka_drawingface/qt_opencv_server_kuka_app/: mainwindow.cpp  mainwindow.h  mainwindow.ui  myserver.cpp  myserver.h  mythread.cpp  mythread.h  opencv.cpp  opencv.h  points.txt  serverproxy.cpp  serverproxy.h  spline.h  tester.cpp  tester7_multithreadingTCP.pro
py/: pythonSol.py
ws_eclipse/: .gitignore
ws_eclipse/.metadata/: version.ini
ws_eclipse/Algorithms/koko2/: eqwe.docx
ws_eclipse/Algorithms/src/: BinarySearch.java  MaxIncreasingSequence_type.java  QueWithPriority.java
(+733 files in other folders)
